@startuml brazilian-elections-analysis

Election -> "0..*" Candidate : Maps >
Election -> "0..*" Party : Maps >

class Election {
    -candidates: HashMap<Integer, Candidate>
    -parties: HashMap<Integer, Party>
    -electionDate: LocalDate
    -officeOption: String
    -seats: int
    -listVotes: int
    -nominalVotes: int
    -totalVotes: int
}

class CSVReader{
    -candidatesFilePath: String
    -pollFilePath: String
}
note bottom of CSVReader: Directly Access from 'App', uses 'Election'

Candidate "0..*" <--> "1" Party : Belongs to >
 
class Candidate{
    -officeOption: int
    -candidateNumber: int
    -ballotName: String
    -partyNumber: int
    -partyAcronym: String
    -federationNumber: int
    -birthDate: LocalDate
    -gender: int
    -turnStatus: int
    -voteDestinationType: String
    -candidacyCondition: int
    -nominalVotes: int
    -age: int
}

class Party{
    -partyNumber: int
    -partyAcronym: String
    -partyName: String
    -numberOfCandidates: int
    -listVotes: int
    -nominalVotes: int
    -totalVotes: int
    -candidates: HashMap<Integer, Candidate>
    -dismissedCandidates: HashMap<Integer, Candidate>
}

class Report {
    -poll: Election
    -sortCandidates: List<Candidate>
    -sortParties: List<Party>
    -seats: int
}

Report -> "1" Election : Analyzes >
Report --right> "0..*" Candidate : Sorts > 
Report --> "0..*" Party : Sorts >


@enduml